# ai-driven-analytics-dashboard

./: .gitignore  CLAUDE.md  HACKATHON_SETUP.md  Makefile  README.md  requirements.txt
.claude/: settings.json
.claude/agents/: data-analyst.md  sql-validator.md
.claude/skills/: cxo-summary.md  demo-review.md  explain-chart.md  hackathon-brief.md  new-chart.md  schema-check.md  to-showcase.md
.github/: DECISIONS.md  HACKATHON_LESSONS.md  INTEGRATION_CONTRACTS.md  NOTES.md  PLAN.md
.github/personas/: marco.md  naveen.md  pathey.md
.streamlit/: config.toml
backend/: chat_orchestrator.py  config.py  database.py  intent_classifier.py  main.py  models.py  provenance.py  pyproject.toml  schema_loader.py  sql_validator.py  static_charts.py
backend/handlers/: explain_chart.py  new_analysis.py  reject.py
dashboard/: DESIGN_BRIEF.md  api_client.py  app.py  theme.py
dashboard/components/: __init__.py  chart_card.py  chat_panel.py
data/: benchmark_questions.json  load_who.py  schema_registry.json
docs/: gen_card.py  gen_preview.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChartCard.tsx  ChartsGrid.tsx  ChatPanel.tsx  Header.tsx  LoadingSkeleton.tsx  MiniChart.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  types.ts
tests/: conftest.py
tests/backend/: test_api.py  test_sql_validator.py  test_static_charts.py
tests/dashboard/: test_ui.py
tests/data/: test_schema_registry.py
